# llm-generated-texts-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  docker-compose.yml  essays-data.dvc  mlflow.dockerfile  pyproject.toml
.dvc/: config
classifier/: data.py  model.py  packaging.py  train.py  utils.py
configs/: config.yaml
model-dir/: example.ipynb
src/: example.ipynb
