[tool.poetry]
name = "llm-generated-texts-classification"
version = "0.1.0"
description = "LLM generated vs human written text classification model"
authors = ["Sergei Burkin <burkin.sv@phystech.edu>"]
readme = "README.md"
repository = "github.com/Sergey-Burkin/llm-generated-texts-detection"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.12.1"
dvc-gdrive = "^3.0.1"
torch = "^2.0"
lightning = "^2.2.1"
# New additions:
transformers = "^4.40.0"  # Hugging Face Transformers
datasets = "^2.18.0"  # Optional but useful for dataset handling
accelerate = "^0.29.0"  # Recommended for training
evaluate = "^0.4.1"  # For evaluation metrics
scikit-learn = "^1.4.0"  # For metrics calculation
pandas = "^2.0.0"  # For parquet file handling
pyarrow = "^15.0.0"  # For parquet support
omegaconf = "^2.3.0"

fire = "^0.6.0"
hydra-core = "^1.3.2"
#pycuda = "^2024.1.2"
onnx = "^1.18.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
